uninstalled electron-reload and instead installed electronmon. It works with concurrently for hot reloading of electron app. Created window and wrote out the html for it. Created a menu for app.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./entry/controller/main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "concurrently \"tailwindcss -i ./src/styling/global.css -o ./entry/view/styling/global.css --watch\" \"tsc -w\" \"electron .\""
+    "dev": "concurrently \"tailwindcss -i ./src/styling/global.css -o ./entry/view/styling/global.css --watch\" \"tsc -w\" \"electronmon .\""
   },
   "keywords": [],
   "author": "Enoch Enujiugha",
@@ -16,11 +16,11 @@
     "@types/toastify-js": "^1.12.0",
     "concurrently": "^8.2.0",
     "electron": "^25.5.0",
+    "electronmon": "^2.0.2",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "electron-reload": "^2.0.0-alpha.1",
     "resize-img": "^2.0.0",
     "toastify-js": "^1.12.0"
   }
