--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "lib": ["ES6"],
+    "lib": ["ES6", "DOM"],
     /* Modules */
     "module": "commonjs",
     "rootDir": "./src",
